deployment/gymio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gymio
  labels:
    app: gymio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gymio
  template:
    metadata:
      labels:
        app: gymio
    spec:
      containers:
        - name: gymio
          image: gcr.io/gymio-220023/$CIRCLE_PROJECT_REPONAME:$CIRCLE_PROJECT_USERNAME-$CIRCLE_BRANCH-$CIRCLE_SHA1
          ports:
            - containerPort: 8080
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.11
          command: ["/cloud_sql_proxy",
                    "-instances=gymio-220023:europe-north1:gymio-1=tcp:5432",
                    "-credential_file=/secrets/cloudsql/credentials.json"]
          securityContext:
            runAsUser: 2  # non-root user
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
      volumes:
      - name: cloudsql-instance-credentials
        secret:
          secretName: cloudsql-instance-credentials
