deployment/gymio-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: gymio
spec:
  type: LoadBalancer
  selector:
    app: gymio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
