deployment/gymio-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gymio
  annotations:
    ingress.gcp.kubernetes.io/pre-shared-cert: "gymioapp2"
    kubernetes.io/ingress.allow-http: "false"
spec:
  backend:
    serviceName: gymio
    servicePort: 8080
